# luma-lang

./: Cargo.toml  README.md  syntax.luma  test.luma  test.py
crates/luma_codegen/: Cargo.toml
crates/luma_codegen/src/: codegen.rs  ctx.rs  diagnostics.rs  lib.rs
crates/luma_compiler/: Cargo.toml
crates/luma_compiler/src/: compiler.rs  ctx.rs  diagnostics.rs  error.rs  lib.rs  main.rs  options.rs
crates/luma_compiler/src/analyzer/: ctx.rs  error.rs  mod.rs  registry.rs  scopes.rs  symbols.rs
crates/luma_compiler/src/analyzer/passes/: _01_name_declaration.rs  _01_scope_identification.rs  _02_name_declaration.rs  _02_name_resolution.rs  _03_name_resolution.rs  _03_type_inference.rs  _04_type_inference.rs  mod.rs
crates/luma_compiler/src/analyzer/passes/tests/: _03_type_inference.rs  mod.rs
crates/luma_compiler/src/codegen/: mod.rs
crates/luma_compiler/src/lexer/: mod.rs  tokens.rs
crates/luma_compiler/src/parser/: context.rs  error.rs  mod.rs  parse.rs  parse_expr.rs  parse_stmt.rs  parse_util.rs
crates/luma_compiler/src/parser/tests/: mod.rs  parse_func.rs  parse_var.rs
crates/luma_compiler/src/representation/: mod.rs  operator.rs  types.rs  visibility.rs
crates/luma_compiler/src/representation/aast/: expr.rs  mod.rs  operator.rs  stmt.rs  symbol.rs  walker.rs
crates/luma_compiler/src/representation/ast/: expr.rs  mod.rs  stmt.rs  symbol.rs  types.rs  walker.rs
crates/luma_compiler/src/representation/bytecode/: mod.rs  opcode.rs  value.rs
crates/luma_compiler/src/stages/: mod.rs
crates/luma_compiler/src/stages/analyzer/: ctx.rs  diagnostics.rs  error.rs  mod.rs  scopes.rs  symbols.rs  type_cache.rs
crates/luma_compiler/src/stages/analyzer/passes/: _01_scope_identification.rs  _02_name_declaration.rs  _03_name_resolution.rs  _04_type_inference.rs  mod.rs
crates/luma_compiler/src/stages/analyzer/passes/_01_ast/: _01_scope_identification.rs  _02_name_declaration.rs  _03_name_resolution.rs  _04_type_inference.rs  _05_type_solving.rs  _06_type_finalization.rs  mod.rs
crates/luma_compiler/src/stages/analyzer/passes/_01_ast/tests/: _03_type_inference.rs  mod.rs
crates/luma_compiler/src/stages/analyzer/passes/_02_aast/: _01_type_checking.rs  mod.rs
crates/luma_compiler/src/stages/analyzer/passes/tests/: _03_type_inference.rs  mod.rs
crates/luma_compiler/src/stages/codegen/: bytecode_gen.rs  chunks.rs  ctx.rs  diagnostics.rs  error.rs  generator.rs  mod.rs  scope.rs
crates/luma_compiler/src/stages/codegen/chunk/: builder.rs  env.rs  kind.rs  mod.rs
crates/luma_compiler/src/stages/codegen/module/: ctx.rs  mod.rs
crates/luma_compiler/src/stages/codegen/stores/: constant_table.rs  export_table.rs  function_table.rs  mod.rs  signature_table.rs
crates/luma_compiler/src/stages/lexer/: mod.rs  options.rs  tokens.rs
crates/luma_compiler/src/stages/lowering/: ast_to_aast.rs  diagnostics.rs  error.rs  mod.rs
crates/luma_compiler/src/stages/parser/: ctx.rs  diagnostics.rs  error.rs  mod.rs  parse.rs  parse_expr.rs  parse_stmt.rs  parse_util.rs
crates/luma_compiler/src/stages/parser/tests/: mod.rs  parse_func.rs  parse_var.rs
crates/luma_core/: Cargo.toml
crates/luma_core/src/: input.rs  lib.rs  operators.rs  source.rs  span.rs  types.rs  visibility.rs
crates/luma_core/src/ast/: expr.rs  expressions.rs  mod.rs  operators.rs  statements.rs  stmt.rs  symbol.rs  types.rs  visibility.rs  walker.rs
crates/luma_core/src/bytecode/: chunk.rs  mod.rs  opcode.rs  value.rs
crates/luma_core/src/sources/: manager.rs  mod.rs
crates/luma_diagnostic/: Cargo.toml
crates/luma_diagnostic/src/: diagnostic.rs  diagnostic_store.rs  error.rs  lib.rs  macros.rs  reporter.rs
crates/luma_diagnostic/src/pretty_print/: mod.rs
crates/luma_lexer/: Cargo.toml
crates/luma_lexer/src/: diagnostics.rs  lib.rs
crates/luma_lexer/src/tokens/: convert.rs  kind.rs  mod.rs  stream.rs
crates/luma_macros/: Cargo.toml
crates/luma_macros/src/: diagnostic.rs  display.rs  lib.rs
crates/luma_parser/: Cargo.toml
crates/luma_parser/src/: diagnostics.rs  lib.rs  parse_expr.rs  parse_stmt.rs
crates/luma_semantics/: Cargo.toml
crates/luma_semantics/src/: ctx.rs  diagnostics.rs  lib.rs  source.rs  symbol.rs
crates/luma_semantics/src/hir/: expressions.rs  mod.rs  (+1 more)
crates/luma_tests/: Cargo.toml
crates/luma_tests/tests/: lib.rs
crates/luma_tests/tests/exec/: mod.rs  test_fib_seq.rs
crates/luma_tests/tests/parsing/: mod.rs  test_parsing_if.rs
crates/luma_vm/: Cargo.toml
crates/luma_vm/src/: errors.rs  lib.rs  source.rs  vm.rs
examples/: sample.luma  structs_and_funcs.luma
luma/: Cargo.toml
luma/src/: engine.rs  lib.rs  main.rs
scripts/: .gitignore  benchmark.sh  profile.sh
(+27 files in other folders)
