[workspace]
members = [
  "luma",
  "crates/*",
]
resolver = "3"

[workspace.package]
authors = ["LynithDev"]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
# local
luma_macros = { path = "crates/luma_macros" }
luma_core = { path = "crates/luma_core" }
luma_diagnostic = { path = "crates/luma_diagnostic" }
luma_lexer = { path = "crates/luma_lexer" }
luma_parser = { path = "crates/luma_parser" }
luma_semantics = { path = "crates/luma_semantics" }
luma_codegen = { path = "crates/luma_codegen" }
luma_vm = { path = "crates/luma_vm" }
luma = { path = "luma" }

# util
owo-colors = { version = "=4.2.2" }

# macro
proc-macro2 = { version = "=1.0.96" }
quote = { version = "=1.0.40" }
syn = { version = "=2.0.104" }

# Fastest possible build
[profile.release-speed]
codegen-units = 1
incremental = false
inherits = "release"
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

# Fast build for profiling
[profile.release-profiling]
inherits = "release"
debug = true
strip = false

# Smallest possible binary
[profile.release-size]
codegen-units = 1
incremental = false
inherits = "release"
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
