[package]
name = "luma_compiler"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
luma_core = { workspace = true }
luma_diagnostic = { workspace = true }

# utils
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }