[package]
name = "luma_diagnostic"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
luma_core = { workspace = true }
luma_macros = { workspace = true, features = [ "diagnostic" ] }

owo-colors = { workspace = true, optional = true }

[features]
default = ["reporter"]
reporter = ["dep:owo-colors"]