[package]
name = "luma_diagnostic"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
luma_core = { workspace = true }

annotate-snippets = { workspace = true, optional = true }

[features]
default = ["pretty"]
pretty = ["dep:annotate-snippets"]
